Fixed some styling issues, nav rendering on iOS bounce

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ p {
     }
 
 hr {
+    height: 1px;
     margin-top: 3rem;
     margin-bottom: 3rem;
     background-color: #eaeaea;
@@ -101,6 +102,10 @@ hr {
         top: .8rem;
         right: 0;
     }
+
+.break .container {
+    max-width: 95%;
+}
 
 #intro {
     position: relative;
